--- a/doc/static/css/custom.css
+++ b/doc/static/css/custom.css
@@ -50,10 +50,11 @@ Remove table outlines*/
     padding:4px 3px
 }
 
+/* code elements */
 code, .rst-content tt, .rst-content code {
     background: transparent;
     border: none;
-    font-size: 100%;
+    font-size: 90%;
 }
 
 /* wrap cells */
@@ -79,7 +80,7 @@ Autodoc parameters
 ------------------
 */
 .rst-content dl:not(.docutils) dt {
-    font-size: 100%;
+    font-size: 90%;
     font-family: monospace;
     font-weight: normal;
     line-height: normal;
